# test-uoroboros

./: pyproject.toml
src/sample_uos/: __init__.py  math_ops.py  pipeline_ops.py  string_ops.py
