[project]
name = "sample-uos"
version = "0.1.0"
description = "Sample Unit Operations for testing uostore"
requires-python = ">=3.10"
dependencies = ["uostore"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sample_uos"]
